Added initial client/server functionality.